apps/base/sftpgo/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sftpgo
  namespace: sftpgo
  labels:
    app: sftpgo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sftpgo
  template:
    metadata:
      labels:
        app: sftpgo
    spec:
      containers:
        - name: sftpgo
          image: drakkan/sftpgo:v2.7.3
          ports:
            - containerPort: 8080 # Admin Web UI
            - containerPort: 2022 # SFTP port
            - containerPort: 8081 # WebDav
          volumeMounts:
            - name: sftp-data
              mountPath: /var/lib/sftpgo
      volumes:
        - name: sftp-data
          persistentVolumeClaim:
            claimName: sftpgo-pvc
