apps/base/sftpgo/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sftpgo
  namespace: sftpgo
spec:
  type: NodePort
  selector:
    app: sftpgo
  ports:
    - name: web
      port: 80
      targetPort: 8080
    - name: sftp
      port: 2022
      targetPort: 2022
      nodePort: 32022
    - name: webdav
      port: 81
      targetPort: 8081
